<package>
  <name>phantomx_arm</name>
  <version>0.0.2</version>
  <description>
    The phantomx arm meta package for ROS2.
  </description>
  <author>Jorge Santos of turtlebot fame</author>
  <maintainer email="cdr.wolfe@gmail.com">Wolfe</maintainer>
  <maintainer email="wouter@caarls.org">Wouter Caarls</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <run_depend>phantomx_arm_bringup</run_depend>
  <run_depend>phantomx_arm_description</run_depend>
  <run_depend>phantomx_arm_hw</run_depend>
  <run_depend>phantomx_arm_moveit_config</run_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
