<package>
  <name>phantomx_arm_bringup</name>
  <version>0.0.1</version>
  <description>
   phantomx_arm_bringup provides launch files for starting the drivers for the PhantomX Pincher arm.
  </description>
  <author>See turtlebot_arm package</author>
  <maintainer email="cdr.wolfe@gmail.com">Wolfe</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <run_depend>arbotix_python</run_depend>
  <run_depend>arbotix_controllers</run_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
