<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>phantomx_arm_description</name>
  <version>0.0.2</version>
  <description>phantomx_arm_description contains URDF files and meshes for the Phantomx arm.</description>
  <author>Jorge Santos of turtlebot fame</author>
  <maintainer email="cdr.wolfe@gmail.com">Wolfe</maintainer>
  <maintainer email="wouter@caarls.org">Wouter Caarls</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
