<?xml version="1.0"?>
<package format="3">
  <name>phantomx_arm_hw</name>
  <version>0.0.0</version>
  <description>ROS2 Control interface to PhantomX Pincher arm</description>
  <maintainer email="wouter@caarls.org">Wouter Caarls</maintainer>
  <author email="wouter@caarls.org">Wouter Caarls</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  
  <build_depend>pluginlib</build_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
